# agent-evalkit

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
adapters/: mock.py  openai_chat.py
benchmarks/example_qa/: fixtures.jsonl  manifest.yaml  rubric.md
dashboard/: README.md
dashboard/backend/: auth.py  auth_routes.py  benchmarks.py  cases.py  history.py  hydrate.py  leaderboard.py  live.py  notes.py  paths.py  reports.py  requirements.txt  routes.py  runs.py
dashboard/frontend/: .gitignore  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  vercel.json
dashboard/frontend/app/: globals.css  layout.tsx  page.tsx
dashboard/frontend/app/benchmarks/: page.tsx
dashboard/frontend/app/compare/: page.tsx
dashboard/frontend/app/leaderboard/: page.tsx
dashboard/frontend/app/live/: page.tsx
dashboard/frontend/app/login/: page.tsx
dashboard/frontend/app/reports/: page.tsx
dashboard/frontend/components/: auth-guard.tsx  case-detail.tsx  case-list.tsx  events-timeline.tsx  fixture-viewer.tsx  leaderboard-table.tsx  live-progress.tsx  narrative-renderer.tsx  nav.tsx  radar-chart.tsx  radar-tick.tsx  run-history.tsx
dashboard/frontend/lib/: api-client.ts  auth-context.tsx  i18n.tsx  model-meta.ts  score.ts  task-meta.ts  types.ts  use-route-id.ts
dashboard/narrative/: case_picker.py  generator.py  prompts.py
demo/: generate_demo_data.py
evalkit/: __init__.py  adapter.py  assertions.py  cli.py  judge.py  leaderboard.py  loader.py  models.py  pipeline.py  record.py  run_many.py  runner.py  scorer.py
(+48 files in other folders)
